# advent-of-code

./: .gitignore  README.org
2018/clojure/: 2018.clj  project.clj
2019/haskell/src/: aoc19.hs
2019/racket/: aoc19.rkt
2019/rust/src/: main.rs
aoc-15/lisp/: advent-of-code-15.lisp
aoc-19/rust/: Cargo.toml
aoc15/aoc15/: .gitignore  README.md  mix.exs
aoc15/aoc15/lib/: aoc15.ex
aoc15/elixir/lib/: aoc15.ex
aoc15/elixir/test/: aoc15_test.exs
aoc15/lisp/: advent-of-code-15.lisp
aoc15/racket/: aoc15.rkt
aoc15/racket/wires/: main.rkt  wires-part-one.rkt  (+1 more)
aoc16/lisp/: advent-of-code-16.lisp
aoc16/racket/: aoc16.rkt
aoc17/haskell/: haskell.cabal
aoc17/haskell/src/: Main.hs
aoc17/input/: day-23.input
aoc17/lisp/: aoc.lisp
aoc19/haskell/: package.yaml
aoc19/racket/: aoc19.rkt
aoc19/rust/: Cargo.toml
aoc20/ocaml/: .ocamlinit  day1.ml  day10.ml  day11.ml  day12.ml  day13.ml  day15.ml  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day9.ml  dune
aoc21/elixir/: .gitignore  README.md  flake.nix  mix.exs
aoc21/haskell/: haskell.cabal  package.yaml
aoc21/racket/: aoc21.rkt
aoc22/gleam/: README.md  gleam.toml  manifest.toml
aoc22/haskell/: LICENSE  aoc22.cabal  flake.nix  package.yaml  stack.yaml
aoc23/elixir/: .gitignore  flake.nix  mix.exs
aoc24/gleam/: flake.nix  gleam.toml
aoc24/haskell/: CHANGELOG.md  LICENSE  aoc24.cabal  default.nix  flake.nix  shell.nix
aoc24/haskell/app/: Main.hs
aoc24/haskell/lib/: Day9.hs
aoc24/haskell/lib/Aoc24/: Day9.hs
aoc24/haskell/tests/: Main.hs
aoc25/: flake.nix
aoc25/gleam/: flake.nix
(+83 files in other folders)
