name:                haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sstoltze/haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Sarah Stoltze
maintainer:          sstoltze@gmail.com
copyright:           2020 Sarah Stoltze
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
