cabal-version:      3.0
name:               aoc24
version:            0.1.0.0
license:            BSD-3-Clause

license-file:       LICENSE

author:             Sarah Stoltze

maintainer:         sstoltze@gmail.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall

common deps
  build-depends: base ^>=4.18.2.1

executable aoc24
  import:           warnings, deps
  main-is:          Main.hs
  build-depends:    aoc24
  hs-source-dirs:   app
  default-language: Haskell2010

library
  import:           deps
  hs-source-dirs:   lib
  exposed-modules:  Day9
  default-language: Haskell2010

test-suite tests
  import:           deps
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   tests
  default-language: Haskell2010
  build-depends:    hspec, aoc24
